--- a/debian_files/etc/systemd/system/navcoin-angular.service
+++ b/debian_files/etc/systemd/system/navcoin-angular.service
@@ -5,7 +5,7 @@ After=network-online.target
 After=time-sync.target
 
 [Service]
-User=odroid
+User=root
 Type=simple
 WorkingDirectory=/opt/navcoin-angular/
 ExecStart=/opt/navcoin-angular/node_modules/@angular/cli/bin/ng serve --ssl true --proxy-config proxy.config.json --host 0.0.0.0
