--- a/debian_files/etc/systemd/system/navcoin-angular.service
+++ b/debian_files/etc/systemd/system/navcoin-angular.service
@@ -11,6 +11,8 @@ WorkingDirectory=/opt/navcoin-angular/
 ExecStart=/opt/navcoin-angular/node_modules/@angular/cli/bin/ng serve --ssl true --proxy-config proxy.config.json --host 0.0.0.0
 ExecStop=/bin/kill $MAINPID
 TimeoutStopSec=300
+StandardOutput=append:/var/log/navcoin-angular.log
+StandardError=append:/var/log/navcoin-angular.log
 
 [Install]
 WantedBy=multi-user.target
