--- a/debian_files/etc/systemd/system/navcoin-angular.service
+++ b/debian_files/etc/systemd/system/navcoin-angular.service
@@ -6,7 +6,7 @@ After=time-sync.target
 
 [Service]
 User=odroid
-Type=simple
+Type=notify
 WorkingDirectory=/opt/navcoin-angular/
 ExecStart=/opt/navcoin-angular/node_modules/@angular/cli/bin/ng serve --ssl true --proxy-config proxy.config.json --host 0.0.0.0
 ExecStop=/bin/kill $MAINPID
